@@ -113,7 +113,7 @@ ul.tree span.t3-icon {
 	height: 27px;
 	position: absolute;
 	top: 22px;
-	width: 260px;
+	width: 280px;
 	z-index: 3;
 }
 
@@ -122,13 +122,13 @@ ul.tree span.t3-icon {
 }
 
 #treeFilter {
-	margin: 2px 0 0 17px !important;
+	margin: 6px 0 0 17px !important;
 	height: 16px;
 	width: 165px;
 }
 
 #treeFilterReset {
-	left: 176px;
+	left: 189px;
 	position: absolute;
 	top: 4px;
 	visibility: hidden;
